@@ -8,16 +8,11 @@ import com.example.plazoleta.ms_plazoleta.infrastructure.entities.OrderEntity;
 import java.util.List;
 import java.util.stream.Collectors;
 
-
 public class OrderEntityMapper {
 
     private OrderEntityMapper() {}
 
     public static OrderEntity toEntity(Order order) {
-        List<OrderDishEntity> dishes = order.getDishes().stream()
-                .map(dish -> new OrderDishEntity(null, dish.getDishId(), dish.getQuantity()))
-                .collect(Collectors.toList());
-
         OrderEntity entity = new OrderEntity();
         entity.setId(order.getId());
         entity.setClientId(order.getClientId());
@@ -25,14 +20,26 @@ public class OrderEntityMapper {
         entity.setDate(order.getDate());
         entity.setStatus(order.getStatus());
         entity.setAssignedEmployeeId(order.getAssignedEmployeeId());
-        entity.setDishOrders(dishes);
+        entity.setPin(order.getPin());
+
+        // Mapear platos y asignar la relación inversa
+        List<OrderDishEntity> dishEntities = order.getDishes().stream()
+                .map(dish -> {
+                    OrderDishEntity dishEntity = new OrderDishEntity(null, dish.getDishId(), dish.getQuantity());
+                    dishEntity.setOrder(entity);
+                    return dishEntity;
+                })
+                .collect(Collectors.toList());
+
+        entity.setDishOrders(dishEntities);
+
         return entity;
     }
 
     public static Order toModel(OrderEntity entity) {
         List<OrderDish> dishes = entity.getDishOrders().stream()
                 .map(d -> new OrderDish(d.getDishId(), d.getQuantity()))
-                .toList();
+                .collect(Collectors.toList());
 
         return new Order(
                 entity.getId(),
@@ -41,7 +48,8 @@ public class OrderEntityMapper {
                 dishes,
                 entity.getDate(),
                 entity.getStatus(),
-                entity.getAssignedEmployeeId()
+                entity.getAssignedEmployeeId(),
+                entity.getPin()
         );
     }
 }
